cargo-features = ["default-run"]

[package]
name = "ss-ecdsa-poc"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2018"
default-run = "ss_ecdsa_poc"


[dependencies]

curv = { git = "https://github.com/KZen-networks/curv", features = [ "ec_secp256k1" ] }
multi-party-ecdsa = { git = "https://github.com/coblox/multi-party-ecdsa" }
paillier = { git = "https://github.com/KZen-networks/rust-paillier"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier"}
secp256k1 = "0.12"
bitcoin_hashes = "0.3"
merlin = { version = "1.1", features = ["debug-transcript"] }
rand = "0.6"
hex = "0.3"

